# positron-demos-notebooks

./: README.md  explore-energy-data.ipynb  pyproject.toml  requirements.txt
data/: energy_usage.csv
notebooks/energy-data/: my-energy-usage.ipynb
notebooks/energy-data/data/: gas_usage.csv
notebooks/world-happiness-report/: README.md  pyproject.toml  world-happiness-report.ipynb
