[project]
name = "positron_demo_notebooks"
version = "0.1.0"
description = "A simple, open repo where we host small, purpose-built notebooks for hands-on testing, feedback sessions, and product demos."
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
